--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="UTF-8">
-    <link rel="icon" href="css/cover-c.png" />
+    <link rel="icon" href="CSS/cover-c.png" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Diet Planner</title>
@@ -13,9 +13,9 @@
 </head>
 
 <body>
-    <img class="background-img" src="./css/new.png" >
+    <img class="background-img" src="CSS/new.png" >
     <nav>
-        <div class="favicon"><img src="css/cover-f.png"></div>
+        <div class="favicon"><img src="CSS/cover-f.png"></div>
         <ul>
             <li><a href="./index.html" class="Mynav">Home</a></li>
             <li><a href="./dietplan.html" class="Mynav">Diet Plans</a></li>
