--- a/food.html
+++ b/food.html
@@ -3,16 +3,16 @@
 
 <head>
     <meta charset="UTF-8">
-    <link rel="icon" href="css/cover-c.png" />
+    <link rel="icon" href="CSS/cover-c.png" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title> Diet Planner</title>
-    <link rel="stylesheet" href="css/foodstyles.css">
+    <link rel="stylesheet" href="CSS/foodstyles.css">
 </head>
 
 <body>
     <nav>
-        <div class="favicon"><img src="css/cover-f.png"></div>
+        <div class="favicon"><img src="CSS/cover-f.png"></div>
         <ul>
             <li><a href="./index.html" class="Mynav">Home</a></li>
             <li><a href="./dietplan.html" class="Mynav">Diet Plans</a></li>
@@ -22,7 +22,7 @@
 
         </ul>
     </nav>
-    <img class="background-img" src="css/bg6.jpg">
+    <img class="background-img" src="CSS/bg6.jpg">
     <div class="section-box">
         <div class="left-div">
             <label for="item_to_calorie"> Ingredients</label>
