--- a/dietplan.html
+++ b/dietplan.html
@@ -3,17 +3,17 @@
 
 <head>
     <meta charset="UTF-8">
-    <link rel="icon" href="css/cover-c.png" />
+    <link rel="icon" href="CSS/cover-c.png" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Diet Planner</title>
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png">
-    <link rel="stylesheet" href="css/style1.css">
+    <link rel="stylesheet" href="CSS/style1.css">
 </head>
 
 <body>
     <nav>
-        <div class="favicon"><img src="css/cover-f.png"></div>
+        <div class="favicon"><img src="CSS/cover-f.png"></div>
         <ul>
             <li><a href="./index.html" class="Mynav">Home</a></li>
             <li><a href="./dietplan.html" class="Mynav">Diet Plans</a></li>
@@ -482,8 +482,4 @@
     <script src="JavaScript/API.js"></script>
     <script src="JavaScript/script2.js"></script>
     <script src="JavaScript/script3.js"></script>
-    <footer>
-        <p>&copy; | Diet Planner | 2021 </p>
-    </footer>
-
 </html>
