--- a/about.html
+++ b/about.html
@@ -3,18 +3,17 @@
 
 <head>
   <meta charset="UTF-8">
-  <link rel="icon" href="css/cover-c.png" />
+  <link rel="icon" href="CSS/cover-c.png" />
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title> Diet Planner</title>
-  <link rel="stylesheet" href="css/foodstyles.css">
-  <link rel="stylesheet" href="About.css">
-  <!-- <link rel="stylesheet" href="CSS/About.css"> -->
+  <link rel="stylesheet" href="CSS/foodstyles.css">
+  <link rel="stylesheet" href="CSS/About.css">
 </head>
 
 <body>
   <nav>
-    <div class="favicon"><img src="css/cover-f.png"></div>
+    <div class="favicon"><img src="CSS/cover-f.png"></div>
     <ul>
       <li><a href="./index.html" class="Mynav">Home</a></li>
       <li><a href="./dietplan.html" class="Mynav">Diet Plans</a></li>
@@ -24,7 +23,7 @@
 
     </ul>
   </nav>
-  <img class="background-img" src="css/bg12.jfif">
+  <img class="background-img" src="CSS/bg12.jfif">
 
   <div class="section-box">
     <div class="left-div">
@@ -66,8 +65,8 @@
   <script src="JavaScript/API.js"></script>
   <script src="JavaScript/script2.js"></script>
 </body>
-<footer id="footer">
+<!-- <footer id="footer">
   <p>&copy; | Diet Planner | 2021 </p>
-</footer>
+</footer> -->
 
 </html>
