--- a/contact.html
+++ b/contact.html
@@ -2,16 +2,16 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <link rel="icon" href="css/cover-c.png" />
+    <link rel="icon" href="CSS/cover-c.png" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Diet Planner</title>
-    <link rel="stylesheet" href="css/contactstyle.css">
+    <link rel="stylesheet" href="CSS/contactstyle.css">
 </head>
 <body>
-    <img class="background-img" src="css/bg7.jpg">
+    <img class="background-img" src="CSS/bg7.jpg">
     <nav>
-        <div class="favicon"><img src="css/cover-f.png"></div>
+        <div class="favicon"><img src="CSS/cover-f.png"></div>
         <ul>
             <li><a href="./index.html" class="Mynav">Home</a></li>
             <li><a href="./dietplan.html" class="Mynav">Diet Plans</a></li>
